# compdfkit-conversion-sdk-mac

./: README.md
ComPDFKit_Conversion_mac_objectivec/: LICENSE  release_notes.txt
ComPDFKit_Conversion_mac_objectivec/doc/: upgrade_warnings.md
ComPDFKit_Conversion_mac_objectivec/doc/html/: annotated.html  annotated_dup.js  base__type_8h_source.html  classes.html  common_8h_source.html  conversion_8h_source.html  conversion__types_8h_source.html  dir_6f9635d4fbfa321d4c00f29df5cd540c.html  dir_84d9e81c8d04196d7d2843ad9c0ea13f.html  dir_cd18724fbdc2e22426fb51dd33fa4d1b.html  dir_e785c32b38a53e12965e1d770cdf0702.html  document__ai_8h_source.html  doxygen_crawl.html  functions.html  functions_func.html  functions_prop.html  hierarchy.html  hierarchy.js  index.html  index.js  interface_c_d_e_w_a_r_p_result.html  interface_c_d_e_w_a_r_p_result.js  interface_c_line.html  interface_c_line.js  interface_c_m_a_g_i_c_c_o_l_o_r_result.html  interface_c_m_a_g_i_c_c_o_l_o_r_result.js  interface_c_o_c_r_result.html  interface_c_o_c_r_result.js  interface_c_p_d_f_conversion.html  interface_c_p_d_f_conversion.js  interface_c_p_d_f_document_a_i.html  interface_c_p_d_f_document_a_i.js  interface_c_rect.html  interface_c_rect.js  interface_c_t_a_b_result.html  interface_c_t_a_b_result.js  interface_c_table_cell.html  interface_c_table_cell.js  interface_c_text_line.html  interface_c_text_line.js  (+29 more)
ComPDFKit_Conversion_mac_objectivec/doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  (+26 more)
ComPDFKit_Conversion_mac_objectivec/lib/CPDFConversion.framework/Versions/A/: CPDFConversion
ComPDFKit_Conversion_mac_objectivec/lib/CPDFConversion.framework/Versions/A/Headers/: CPDFConversion.h  base_type.h  document_ai.h
ComPDFKit_Conversion_mac_objectivec/lib/CPDFConversion.framework/Versions/A/Modules/: module.modulemap
ComPDFKit_Conversion_mac_objectivec/lib/CPDFConversion.framework/Versions/A/Resources/: Info.plist
ComPDFKit_Conversion_mac_objectivec/lib/compdfkitconversionsdk_objective_c.framework/: compdfkitconversionsdk_objective_c
ComPDFKit_Conversion_mac_objectivec/lib/compdfkitconversionsdk_objective_c.framework/Versions/A/: compdfkitconversionsdk_objective_c
ComPDFKit_Conversion_mac_objectivec/lib/compdfkitconversionsdk_objective_c.framework/Versions/A/Headers/: compdfkitconversionsdk_objective_c.h  conversion.h
ComPDFKit_Conversion_mac_objectivec/lib/compdfkitconversionsdk_objective_c.framework/Versions/A/Modules/: module.modulemap
ComPDFKit_Conversion_mac_objectivec/lib/compdfkitconversionsdk_objective_c.framework/Versions/A/Resources/: Info.plist
ComPDFKit_Conversion_mac_objectivec/lib/compdfkitconversionsdk_objective_c.framework/Versions/A/_CodeSignature/: CodeResources
ComPDFKit_Conversion_mac_objectivec/resource/license/: license.xml
ComPDFKit_Conversion_mac_objectivec/resource/models/: documentai.model
ComPDFKit_Conversion_mac_objectivec/samples/uidemo/: AppDelegate.m  BuildDemo.sh  CMakeLists.txt  ViewController.h  ViewController.m  copy_resources.sh
ComPDFKit_Conversion_mac_objectivec/samples/uidemo/include/: base_type.h  common.h
ComPDFKit_Conversion_mac_objectivec/samples/uidemo/resource/: MainMenu.xib
